Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
         <h1>
 <a name="prana" class="anchor" href="#prana"><span class="octicon octicon-link"></span></a>Prana</h1>
 
-<p>Prana is a micro framework for building extensible applications with strong code reusability features.</p>
+<p>Prana is a general purpose microframework for building extensible, modular applications and frameworks with strong code reusability features.</p>
 
-<p>Prana has some breakthrough concepts that makes building complex applications very easy. You can use Prana for building not only web applications but also other kind of applications, such as command line applications, sockets, etc.</p>
+<p>Prana has some breakthrough concepts that abstract the small pieces common to every application. You can use Prana for building not only web applications but also other kind of applications, such as command line applications, sockets, etc.</p>
+
+<p>Prana provides an unified API for interacting with objects, from configuration settings, object metadata to complex media objects, everything can be created and manipulated with Prana.</p>
 
 <h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
@@ -205,6 +207,16 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-43023631-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
