Adding Prana logo.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Prana</h1>
+        <img src="images/logo.ong" alt="Prana">
         <p>Prana Framework</p>
 
         <p class="view"><a href="https://github.com/recidive/prana">View the Project on GitHub <small>recidive/prana</small></a></p>
